fix: underline not work when align bottom & moving clipboard controller from steady to render (#3139)

--- a/packages/sheets-ui/src/views/editor-container/index.module.less
+++ b/packages/sheets-ui/src/views/editor-container/index.module.less
@@ -21,7 +21,9 @@
         width: 100%;
         height: 100%;
 
-        background: white;
+        // Do not set a color, it should be transparent.
+        // create a rendering editor canvas may took 200ms, there would be a white flash if rendering have not finished.
+        // background: white;
 
         canvas {
             position: absolute;
